--- a/ebekala/platforms/android/app/build.gradle
+++ b/ebekala/platforms/android/app/build.gradle
@@ -91,6 +91,7 @@ ext {
 
 // PLUGIN GRADLE EXTENSIONS START
 apply from: "../cordova-android-firebase-gradle-release/ebekalaa-cordova-android-firebase-gradle-release.gradle"
+apply from: "../onesignal-cordova-plugin/ebekalaa-build-extras-onesignal.gradle"
 // PLUGIN GRADLE EXTENSIONS END
 
 def hasBuildExtras1 = file('build-extras.gradle').exists()
@@ -268,6 +269,7 @@ dependencies {
     // SUB-PROJECT DEPENDENCIES START
     implementation(project(path: ":CordovaLib"))
     implementation "com.google.android.gms:play-services-ads:15.0.0"
+    implementation "com.onesignal:OneSignal:3.15.7"
     // SUB-PROJECT DEPENDENCIES END
 }
 
