--- a/ebekala/platforms/android/project.properties
+++ b/ebekala/platforms/android/project.properties
@@ -14,3 +14,5 @@ android.library.reference.2=app
 cordova.system.library.1=com.google.android.gms:play-services-ads:15.0.0
 cordova.gradle.include.1=cordova-android-firebase-gradle-release/ebekalaa-cordova-android-firebase-gradle-release.gradle
 cordova.gradle.include.2=cordova-android-support-gradle-release/ebekalaa-cordova-android-support-gradle-release.gradle
+cordova.system.library.2=com.onesignal:OneSignal:3.15.7
+cordova.gradle.include.3=onesignal-cordova-plugin/ebekalaa-build-extras-onesignal.gradle
