--- a/ebekala/platforms/android/build.gradle
+++ b/ebekala/platforms/android/build.gradle
@@ -56,3 +56,17 @@ allprojects {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+// Fabric Cordova Plugin - Start Fabric Build Tools 
+buildscript {
+    repositories {
+        maven { url 'https://maven.fabric.io/public' }
+        maven { url 'https://maven.google.com' }
+    }
+    dependencies {
+        classpath 'io.fabric.tools:gradle:1.25.4'
+        classpath 'com.google.gms:google-services:+'
+    }
+}
+
+apply plugin: 'io.fabric'
+apply plugin: 'com.google.gms.google-services'
