--- a/ebekala/platforms/android/build.gradle
+++ b/ebekala/platforms/android/build.gradle
@@ -18,22 +18,23 @@
 
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
-
-// Fabric Cordova Plugin - Start Fabric Build Tools 
 buildscript {
     repositories {
-        maven { url 'https://maven.fabric.io/public' }
-        maven { url 'https://maven.google.com' }
+        maven {
+            url "https://maven.google.com"
+        }
+        jcenter()
+        maven { url 'https://maven.fabric.io/public' } // Fabrics Maven repository from cordova-plugin-firebase
     }
     dependencies {
-        classpath 'io.fabric.tools:gradle:1.25.4'
-        classpath 'com.google.gms:google-services:+'
+
+        // NOTE: Do not place your application dependencies here; they belong
+        // in the individual module build.gradle files
+        classpath 'com.android.tools.build:gradle:3.0.1'
+        classpath 'com.google.gms:google-services:4.1.0' // google-services dependency from cordova-plugin-firebase
+        classpath 'io.fabric.tools:gradle:1.25.4' // fabric dependency from cordova-plugin-firebase
     }
 }
-
-apply plugin: 'io.fabric'
-apply plugin: 'com.google.gms.google-services'
-
 
 allprojects {
     repositories {
