--- a/ebekala/platforms/android/build.gradle
+++ b/ebekala/platforms/android/build.gradle
@@ -30,7 +30,7 @@ buildscript {
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
         classpath 'com.android.tools.build:gradle:3.0.1'
-    classpath 'com.google.gms:google-services:$last_version'
+     classpath 'com.google.gms:google-services:3.0.0'
     }
 }
 
@@ -54,3 +54,4 @@ task clean(type: Delete) {
     delete rootProject.buildDir
 }
 apply plugin: 'com.google.gms.google-services'
+implementation 'com.google.firebase:firebase-messaging:16.0.8'
