--- a/ebekala/platforms/android/build.gradle
+++ b/ebekala/platforms/android/build.gradle
@@ -22,6 +22,7 @@ buildscript {
     repositories {
         maven {
             url "https://maven.google.com"
+               maven { url 'https://maven.google.com' }
         }
         jcenter()
     }
