--- a/ebekala/platforms/android/cordova-plugin-firebase/ebekalaa-build.gradle
+++ b/ebekala/platforms/android/cordova-plugin-firebase/ebekalaa-build.gradle
@@ -13,6 +13,8 @@ repositories {
     maven {
         url "https://maven.google.com"
     }
+             maven { url 'https://maven.google.com' }
+
 }
 
 dependencies {
