--- a/ebekala/platforms/android/cordova-plugin-firebase/ebekalaa-build.gradle
+++ b/ebekala/platforms/android/cordova-plugin-firebase/ebekalaa-build.gradle
@@ -26,7 +26,7 @@ dependencies {
 }
 
 cdvPluginPostBuildExtras.add({
-    apply plugin: 'com.google.gms.google-services'
+    apply plugin: 'com.google.gms:google-services'
     apply plugin: 'io.fabric'
     
 })
