--- a/ebekala/platforms/android/cordova-plugin-firebase/ebekalaa-build.gradle
+++ b/ebekala/platforms/android/cordova-plugin-firebase/ebekalaa-build.gradle
@@ -5,7 +5,7 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:+'
-     classpath 'com.google.gms:google-services:3.0.0'
+        classpath 'com.google.gms:google-services:4.1.0'
     }
 }
 repositories {
@@ -13,8 +13,6 @@ repositories {
     maven {
         url "https://maven.google.com"
     }
-             maven { url 'https://maven.google.com' }
-
 }
 
 dependencies {
@@ -26,7 +24,6 @@ dependencies {
 }
 
 cdvPluginPostBuildExtras.add({
-    apply plugin: 'com.google.gms:google-services'
+    apply plugin: 'com.google.gms.google-services'
     apply plugin: 'io.fabric'
-    
 })
