--- a/ebekala/plugins/cordova-plugin-firebase/src/android/build.gradle
+++ b/ebekala/plugins/cordova-plugin-firebase/src/android/build.gradle
@@ -24,5 +24,6 @@ dependencies {
 }
 
 cdvPluginPostBuildExtras.add({
+    apply plugin: 'com.google.gms.google-services'
     apply plugin: 'io.fabric'
 })
